base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - sigmerc.top
      port:
        name: port-https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: httpserver-tls
