base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-gateway
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
    - hosts:
        - sigmerc.top
      secretName: httpserver-tls
  rules:
    - host: sigmerc.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpserver-service
                port:
                  number: 80
